# jupyterAI

./: .dockerignore  .gitignore  README.md  pyproject.toml  주간보고_2026-05-18_2026-05-24.md
.github/actions/slack-notify/: action.yml
.github/workflows/: auto-pr.yml  ci.yml  claude-review.yml  deploy.yml  fix-ci.yml  pr-ready-notify.yml  slack-notify-on-merge.yml
.omc/: _kernel_probe.ipynb  _main_tsx.js  _nb.json  _probe.out.ipynb  _probe_lab_globals.py  _probe_live_insert.py  _put.json  _test_chat.json  _test_chat2.json  prd.json  progress.txt
.omc/state/: hud-stdin-cache.json
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  unit-test-instructions.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  story-generation-plan.md  unit-of-work-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: requirement-clarification-questions.md  requirement-verification-questions.md  requirements.md
aidlc-docs/inception/user-stories/: personas.md  stories.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/backend/: __init__.py  config.py  db.py  main.py  seed.py
infra/ansible/: site.yml
infra/demo-data/mysql/: init.sql
infra/demo-data/postgres/: init.sql
infra/docker-compose/: .env.example  UsersNICEAppDataLocalTempportal-index.html  compose.dev.yml  compose.prod.yml  compose.yml
infra/jupyter/: Dockerfile  requirements.txt
infra/jupyterhub/: Dockerfile  jupyterhub_config.py  platform_authenticator.py  volume_gc.py
infra/keycloak/: realm-export.json
infra/nginx/: spa.conf
infra/portal/: Dockerfile  index.html  nginx.conf  nginx.prod.conf
scripts/: deploy.sh
tests/e2e/: __init__.py  test_analyst_ui.py  test_copilot_active_notebook.py  test_copilot_integration.py  test_copilot_refactor.py  test_copilot_scroll.py  test_full_flow.py  test_jupyter_visible_cell.py  test_oidc_integration.py
tests/integration/: __init__.py  conftest.py  test_admin_user_login.py  test_audit_pipeline.py  test_auth_flow.py  test_credential_roundtrip.py  test_data_connector_postgres.py  test_jupyter_token.py  test_must_change_password.py  test_password_change.py
units/admin-unit/backend/: pyproject.toml
units/admin-unit/backend/migrations/versions/: 0001_admin_tables.py
units/admin-unit/backend/src/admin_backend/: __init__.py  models.py
units/admin-unit/backend/src/admin_backend/adapters/: smtp.py
units/admin-unit/backend/src/admin_backend/api/: router.py
units/admin-unit/backend/src/admin_backend/services/: admin_service.py  backup_service.py
units/admin-unit/backend/tests/: test_backup_service.py
units/audit-unit/: pyproject.toml
units/audit-unit/migrations/versions/: 0001_audit_tables.py
units/audit-unit/src/audit/: __init__.py  consumer.py  emitter.py  models.py
units/audit-unit/src/audit/api/: router.py
units/audit-unit/src/audit/services/: query_api.py
units/audit-unit/tests/: test_outbox_invariant.py
units/auth-unit/: pyproject.toml
units/auth-unit/migrations/versions/: 0001_initial.py
units/auth-unit/src/auth/: models.py
units/auth-unit/src/auth/adapters/: keycloak.py
units/auth-unit/src/auth/api/: login_router.py  oidc_dependency.py  router.py
units/auth-unit/src/auth/services/: auth_service.py  password.py  role_resolver.py  session_service.py
units/auth-unit/tests/: conftest.py  test_role_invariant.py
units/copilot-unit/: pyproject.toml
units/copilot-unit/src/copilot/: __init__.py  factory.py  prompts.py  selftest.py
units/copilot-unit/src/copilot/api/: router.py
units/copilot-unit/src/copilot/providers/: anthropic.py  base.py  internal.py  ollama.py
units/copilot-unit/tests/: test_factory.py  test_internal_provider.py  test_prompts.py
units/credential-unit/: pyproject.toml
units/credential-unit/migrations/versions/: 0001_credentials.py
units/credential-unit/src/credential/: __init__.py  cache.py  models.py
units/credential-unit/src/credential/adapters/: local_kms.py  vault.py
units/credential-unit/src/credential/api/: router.py
units/credential-unit/src/credential/services/: vault_service.py
units/credential-unit/tests/: test_idempotent_register.py  test_lifecycle.py
units/data-unit/: pyproject.toml
units/data-unit/migrations/versions/: 0001_data_tables.py
units/data-unit/src/data/: models.py  schemas.py
units/data-unit/src/data/api/: router.py
units/data-unit/src/data/connectors/: base.py  factory.py  mysql.py  postgres.py  rdbms.py
units/data-unit/src/data/services/: file_ingest.py  pii_masking.py  query_executor.py
units/data-unit/tests/: test_connection_registry.py  test_param_query.py  test_pii_masking.py
units/gateway-unit/: Dockerfile  pyproject.toml
units/gateway-unit/src/gateway/: __init__.py  config.py  main.py
units/gateway-unit/src/gateway/middlewares/: access_log.py  rate_limit.py  request_id.py  security_headers.py
units/gateway-unit/src/gateway/routes/: health.py  oidc.py
units/gateway-unit/tests/: test_security_headers.py
units/notebook-unit/: pyproject.toml
units/shared-lib/: pyproject.toml
units/shared-lib/src/dataplatform_shared/: __init__.py  errors.py  result.py
units/shared-lib/src/dataplatform_shared/audit/: __init__.py  emitter_iface.py  events.py
units/shared-lib/src/dataplatform_shared/idempotency/: __init__.py  keys.py
units/shared-lib/src/dataplatform_shared/security/: __init__.py  kernel_iface.py  rate_limit.py  secret.py
units/shared-lib/src/dataplatform_shared/telemetry/: __init__.py  logging.py  metrics.py  tracing.py
units/shared-lib/src/dataplatform_shared/types/: __init__.py  common.py
units/shared-lib/tests/: __init__.py  test_events.py  test_idempotency.py  test_imports.py  test_result.py  test_secret.py
(+112 files in other folders)
