[project]
name = "backend"
version = "0.1.0"
description = "Composite FastAPI app — mounts every unit's router."
requires-python = ">=3.11"
dependencies = [
    "dataplatform-shared",
    "auth-unit",
    "audit-unit",
    "credential-unit",
    "data-unit",
    "notebook-unit",
    "admin-unit-backend",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "aiosqlite>=0.20,<1",  # default app DB driver (sqlite+aiosqlite)
    "pydantic-settings>=2.3,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
