[project]
name = "auth-unit"
version = "0.1.0"
description = "Keycloak-backed authentication, sessions, and role resolution."
requires-python = ">=3.11"
dependencies = [
    "dataplatform-shared",
    "fastapi>=0.115,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "aiosqlite>=0.20,<1",  # SQLite app store (runtime, not just tests)
    "alembic>=1.13,<2",
    "redis>=5,<6",
    "httpx>=0.27,<1",
    "pyjwt[crypto]>=2.8,<3",
    "bcrypt>=4.1,<6",  # local password hashing (signup/login/admin bootstrap)
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "hypothesis>=6.100,<7",
    "respx>=0.21,<1",
    "aiosqlite>=0.20,<1",  # tests use sqlite
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth"]
