[project]
name = "copilot-unit"
version = "0.1.0"
description = "LLM copilot — provider abstraction (Anthropic + Ollama) + prompts + streaming chat surface."
requires-python = ">=3.11"
dependencies = [
    "dataplatform-shared",
    "fastapi>=0.115,<1",
    "pydantic>=2.7,<3",
    "httpx>=0.27,<1",
    "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]
