[project]
name = "credential-unit"
version = "0.1.0"
description = "Credential lifecycle backed by HashiCorp Vault."
requires-python = ">=3.11"
dependencies = [
    "dataplatform-shared",
    "fastapi>=0.115,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "hvac>=2.1,<3",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "hypothesis>=6.100,<7",
    "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credential"]
