[project]
name = "data-unit"
version = "0.1.0"
description = "Connectors, query execution, PII masking, file uploads."
requires-python = ">=3.11"
dependencies = [
    "dataplatform-shared",
    "fastapi>=0.115,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "aiomysql>=0.2.0,<1",
    "alembic>=1.13,<2",
    "redis>=5,<6",
    "pydantic>=2.7,<3",
    "regex>=2024.5.15",  # safer regex with timeouts
    "pandas>=2.2,<3",
    "pyarrow>=15,<19",
]

[project.optional-dependencies]
db = [
    "psycopg[binary]>=3.1,<4",
    "pymysql>=1.1,<2",
    "oracledb>=2.2,<3",
    "pymssql>=2.3,<3",
    "pyhive[hive]>=0.7,<1",
    "impyla>=0.20,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "hypothesis>=6.100,<7",
    "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data"]
