[project]
name = "gateway-unit"
version = "0.1.0"
description = "Reverse proxy + OIDC callback + SecurityKernel host."
requires-python = ">=3.11"
dependencies = [
    "dataplatform-shared",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "redis>=5,<6",
    "httpx>=0.27,<1",
    "pyjwt[crypto]>=2.8,<3",
    "pydantic-settings>=2.3,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "hypothesis>=6.100,<7",
    "respx>=0.21,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
