[project]
name = "dataplatform-shared"
version = "0.1.0"
description = "Shared library for the internal data analytics platform."
requires-python = ">=3.11"
authors = [{name = "Dataplatform Team"}]
license = {text = "Internal-Use-Only"}
dependencies = [
    "structlog>=24.0,<25",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100,<7",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5",
    "mypy>=1.10",
]
otlp = [
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataplatform_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "property: property-based tests",
]
