[project]
name = "admin-unit-backend"
version = "0.1.0"
description = "Admin/Auditor console backend + backup orchestration."
requires-python = ">=3.11"
dependencies = [
    "dataplatform-shared",
    "fastapi>=0.115,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "aiosmtplib>=3.0,<4",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/admin_backend"]
